--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Joe User
-  email = joe@joeuser.com
+  name = EderSolorzano
+  email = edersolorzano2013@gmail.com
 
 [branch]
   autosetupmerge = true
